syntax="proto3";
package pb;
option go_package="/internal/service;service";
import "storeModels.proto";

message StoreRequest{
  string identity=1;
  string name=2;
  string address=3;
  int32 size=4;
}

message StoreDetailResponse{
  StoreModel StoreDetail=1;
  uint32 Code=2;
}
service StoreService{
  rpc StoreFill(StoreRequest) returns(StoreDetailResponse);
  rpc StoreDetail(StoreRequest) returns(StoreDetailResponse);
  rpc StoreDetailModify(StoreRequest) returns(StoreDetailResponse);
}
